--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="./css/normalize.css">
     <!--<link rel="stylesheet" href="./css/main.css">-->
     <link rel="stylesheet" href="./css/main.min.css">
-
 </head>
 <body>
     <header class="site-header">
@@ -74,7 +73,6 @@
                             </button>
                         </form>
                     </div>
-
                 </div>
         </section> 
 
@@ -90,21 +88,18 @@
 
                     <ul class="static-list">
                         <li class="static-item">
-                            <img class="item-img" src="./img/img1.svg" alt="Static image">
                             <h3 class="item-title">Brand Recognition</h3>
                             <p class="item-text">Boost your brand recognition with each click. Generic links 
                                 don't mean a thing. Branded links help instil confidence in your content.
                             </p>
                         </li>
-                        <li class="static-item second">
-                            <img class="item-img" src="./img/img2.svg" alt="Static image">
+                        <li class="static-item">
                             <h3 class="item-title">Detailed Records</h3>
                             <p class="item-text">Gain insights into who is clicking your links. Knowing when 
                                 and where people engage with your content helps inform better decisions.
                             </p>
                         </li>
-                        <li class="static-item last">
-                            <img class="item-img" src="./img/img3.svg" alt="Static image">
+                        <li class="static-item">
                             <h3 class="item-title">Fully Customizable</h3>
                             <p class="item-text">Improve brand awareness and content discoverability through 
                                 customizable links, supercharging audience engagement.
